--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,22 @@ address{
 .navbar-dark {
     background-color: #512DA8;
 }
+
+.page-enter{
+    opacity: 0.01;
+    transform: trasnlateX(-100%);
+}
+.page-enter-active{
+    opacity: 1;
+    transform: trasnlateX(0%);
+    transition: all 300ms ease-in;
+}
+.page-exit{
+    opacity: 1;
+    transform: trasnlateX(0%);
+}
+.page-exit-active{
+    opacity: 0.01;
+    transform: trasnlateX(100%);
+    transition: all 300ms ease-out;
+}
