Reservation Modal added

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@
     background: #9575CD ;
     color:floralwhite;
 }
+.reserver-text{
+    font-size: small;
+    font-weight: lighter;
+}
 
 address{
     font-size:80%;
